--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,19 @@
     --black4: #000000;
     --black5: #212529;
     --orange: #eb0028;
+    --grey: #444;
     --white: #fff;
-    --grey: #959595;
-    --grey2: #666;
-    --grey3: #ccc;
+    --grey2: #959595;
+    --grey-alt: #d1e2e9;
     --scanderycolor: #2b1f4d;
-    --yellow: #ffcc00;
+    --yellow: #ffd800;
     --green: #59b210;
+    --pink: #f60091;
 }
 
-*{
+*,
+*::after,
+*::before{
     margin: 0;
     padding: 0;
     box-sizing: inherit;
@@ -27,11 +30,19 @@ html {
     box-sizing: border-box;
 }
 
+body {
+    position: relative;
+    font-family: 'Popins', sans-serif;
+    font-size: 1.6rem;
+    color: var(--black);
+    font-weight: 400;
+    background-color: var(--white);
+    z-index: -1;
+
+}
 body,input {
     font-size: 1.6rem;
-    font-weight: 400;
     font-family: 'Archivo', sans-serif;
-    color: var(--black);
 }
 
 a {
@@ -39,29 +50,57 @@ a {
 
 }
 
-ul {
+ul,li {
     list-style: none;
 }
 
 img {
-    max-width: 100;
+    max-width: 100%;
+    max-height: 100%;
+}
 
+.container {
+    width: 100%;
+    max-width: 114rem;
+    margin: 0 auto;
 }
 
 h3,h4 {
     font-weight: 500;
 }
+
+@media only screen and (max-width: 1200px) {
+    .container {
+        padding: 0 3rem;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .container {
+        padding: 0 5rem;
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .container {
+        padding: 0 3rem;
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .container {
+        padding: 0 3rem;
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .container {
+        padding: 0 3rem;
+    }
+}
+
 /*  Header               */
 .header{
     position: relative;
 
 }
-.container {
-    width: 100%;
-    max-width: 117rem;
-    margin: 0 auto;
-    padding: 0 1.6rem;
-}
+
 
 
 /*  Nvigation           */
@@ -79,7 +118,53 @@ h3,h4 {
     width: 100%;
     padding: 0 1rem ;
 }
-.nav .fa-bars {
-    font-size: large;
+.nav__logo a {
+    font-size: 2.5rem;
+    color: var(--black);
+    padding: 1.6rem;
+    font-weight: 700;
 }
+.nav .fa-bars {
+    font-size: 40px;
+}
+.nav__hamburger{
+    /* display: none; */
+    cursor: pointer;
+}
+/* .nav__hamburger i{
+    height: 2.3rem;
+    width: 2.3rem;
+} */
+
+
+.menu__top {
+    display: none;
+}
+
+.nav__menu {
+    width: 50%;
+}
+.nav__list {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 50%;
+}
+
+.nav__item:not(:last-child) {
+    margin-right: 1.6rem;
+}
+
+.nav__list .nav__link:link,
+.nav__list .nav__link:visited{
+    display: inline-block;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    color: var(--black);
+    transition: color .3s ease-in-out;
+}
+.nav__list .nav__link:hover {
+    color: var(--orange);
+}
+
 
